# Peafowl

./: .dockerignore  CLAUDE.md  Dockerfile  RUN_REPORT.md  main.py  main2.py  requirements.txt  run.sh
src/communicator/: node.py
src/libSSS/: .gitignore  CMakeLists.txt  README.md
src/libSSS/cmake/: FindGMP.cmake
src/libSSS/libOTe/cryptoTools/cryptoTools/: CMakeLists.txt
src/libSSS/libOTe/cryptoTools/tests_cryptoTools/: CMakeLists.txt
src/libSSS/libOTe/libOTe/: CMakeLists.txt
src/libSSS/libOTe/libOTe_Tests/: CMakeLists.txt
src/libSSS/osn/: OSNReceiver.cpp  OSNReceiver.h  OSNSender.cpp  OSNSender.h  benes.cpp  op.cpp  op.h
src/libSSS/osn_128/: OSNReceiver.cpp  OSNReceiver.h  OSNSender.cpp  OSNSender.h  benes.h  op.cpp  test.cpp
src/libSSS/python/: libSSS_wrapper.cpp
src/libSSS/test/: test_osn.cpp
